airflow/logs/dag_id=flight_etl/run_id=manual__2025-12-11T01:27:59.842067+00:00/task_id=call_ml_procedure/attempt=1.log
[2025-12-11T01:28:01.992+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: flight_etl.call_ml_procedure manual__2025-12-11T01:27:59.842067+00:00 [queued]>
[2025-12-11T01:28:02.003+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: flight_etl.call_ml_procedure manual__2025-12-11T01:27:59.842067+00:00 [queued]>
[2025-12-11T01:28:02.004+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2025-12-11T01:28:02.019+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): call_ml_procedure> on 2025-12-11 01:27:59.842067+00:00
[2025-12-11T01:28:02.024+0000] {standard_task_runner.py:57} INFO - Started process 974 to run task
[2025-12-11T01:28:02.027+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'flight_etl', 'call_ml_procedure', 'manual__2025-12-11T01:27:59.842067+00:00', '--job-id', '203', '--raw', '--subdir', 'DAGS_FOLDER/etl-dag.py', '--cfg-path', '/tmp/tmp0c8yjgt9']
[2025-12-11T01:28:02.030+0000] {standard_task_runner.py:85} INFO - Job 203: Subtask call_ml_procedure
[2025-12-11T01:28:02.065+0000] {task_command.py:416} INFO - Running <TaskInstance: flight_etl.call_ml_procedure manual__2025-12-11T01:27:59.842067+00:00 [running]> on host 8115e33213ed
[2025-12-11T01:28:02.122+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='flight_etl' AIRFLOW_CTX_TASK_ID='call_ml_procedure' AIRFLOW_CTX_EXECUTION_DATE='2025-12-11T01:27:59.842067+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-12-11T01:27:59.842067+00:00'
[2025-12-11T01:28:02.124+0000] {crypto.py:82} WARNING - empty cryptography key - values will not be stored encrypted.
[2025-12-11T01:28:02.124+0000] {base.py:73} INFO - Using connection ID 'depi_db' for task execution.
[2025-12-11T01:28:02.129+0000] {logging_mixin.py:154} INFO - Starting ml procedure execution...
[2025-12-11T01:28:02.129+0000] {logging_mixin.py:154} INFO - Procedure ml failed: syntax error at or near ";"
LINE 1: CALL ml;
               ^
[2025-12-11T01:28:02.130+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl-dag.py", line 17, in call_procedure
    cursor.execute(f"CALL {procedure_name};")
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 1: CALL ml;
               ^

[2025-12-11T01:28:02.137+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=flight_etl, task_id=call_ml_procedure, execution_date=20251211T012759, start_date=20251211T012801, end_date=20251211T012802
[2025-12-11T01:28:02.151+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 203 for task call_ml_procedure (syntax error at or near ";"
LINE 1: CALL ml;
               ^
; 974)
[2025-12-11T01:28:02.198+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-12-11T01:28:02.212+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
